add extractor ha, tested pm2 stop all

--- a/ha/ha.conf
+++ b/ha/ha.conf
@@ -4,3 +4,5 @@ master_extractor=172.20.4.67
 master_extr_dir=/data/app/bimax-counters/extract
 
 extr_dir=/data/app/bimax-counters/extract
+csync_setting=10
+fail_count=4
