ha for splitter and monitor:

--- a/ha/ha.conf
+++ b/ha/ha.conf
@@ -3,6 +3,15 @@ log=/var/log/ha.log
 master_extractor=172.20.4.67
 master_extr_dir=/data/app/bimax-counters/extract
 
+master_splitter=172.20.4.163
+master_splitter_dir=/data/app/bimax-counters/splitter
+
+master_monitor=172.20.4.163
+master_monitor_dir=/data/app/bimax-counters/monitor
+
 extr_dir=/data/app/bimax-counters/extract
+splitter_dir=/data/app/bimax-counters/splitter
+monitor_dir=/data/app/bimax-counters/monitor
+
 csync_setting=10
 fail_count=4
