add port config on bk host

--- a/backup.conf
+++ b/backup.conf
@@ -1,4 +1,5 @@
-backup_host=172.20.4.52
+backup_host=172.16.64.169
+backup_port=10022
 backup_dir=/data/backup
 
 exclude=/data/app/bimax/exclude_host
